<resources>
    <string name="app_name">HealthMe+</string>
    <string name="home">Домашняя страница</string>
    <string name="calendar">Календарь</string>
    <string name="dict">Справочник</string>
    <string name="tracker">Трекер</string>
    <string name="settings">Настройки</string>
    <string name="hello_blank_fragment">Welcome</string>
    <string name="password">Пароль</string>
    <string name="entry">Вход</string>
    <string name="about_account_question">Нет аккаунта?</string>
    <string name="offer_to_register">Зарегистрируйтесь</string>
    <string name="authorization">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="prompt_email">Email</string>
    <string name="welcome_in">Добро пожаловать в</string>
    <string name="name">Ваше имя</string>
    <string name="gender">Пол</string>
    <string name="dateOfBirth">Дата рождения</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="offer_to_enter">Войдите</string>
    <string name="ic_jessica_in_mask_description">The picture shows a white cat with a medical mask.</string>
    <string name="to_do_question">Что вы хотите сделать?</string>
    <string name="add_appointment">Добавить запись на приём</string>
    <string name="add_symptom">Добавить симптом</string>
    <string name="closest_appointments">Ближайшие записи</string>
    <string name="null_closest_appointments">У вас нет записей на ближайшие 2 дня</string>
    <string name="appointments">Записи на приём</string>
    <string name="timeline">График посещений</string>
    <string name="personalData">Личные данные</string>
    <string name="security">Безопасность и вход</string>
    <string name="notification">Уведомления</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="calendar_settings">Настройки календаря</string>
    <string name="fr_calendar_settings_explanation">Здесь вы можете настроить частоту прохождения медицинских процедур</string>
    <string name="watch_recommended_settings">Посмотреть рекомендуемые настройки</string>
    <string name="ic_home_description">The picture shows a house</string>
    <string name="ic_calendar_description">The figure shows a calendar.</string>
    <string name="ic_search_description">The figure shows a magnifying glass.</string>
    <string name="ic_stethoscope_description">The figure shows a stethoscope.</string>
    <string name="recommended_settings">Рекомендуемые настройки</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="doctors">Врачи</string>
    <string name="surveys">Обследования</string>
    <string name="survey">Обследование</string>
    <string name="vaccination">Прививки</string>
    <string name="ic_doctors_description">The picture shows a doctor.</string>
    <string name="ic_arrow_description">The picture shows a closed arrow.</string>
    <string name="ic_survey_description">The picture shows a fluorography of a person.</string>
    <string name="ic_vaccination_description">The picture shows a vaccine.</string>
    <string name="ic_plus_description">The picture shows a plus.</string>
    <string name="ic_cross_description">The picture shows a cross.</string>
    <string name="ic_dot_description">The figure shows a dot.</string>
    <string name="add_medicine">Добавить приём лекарства</string>
    <string name="update_medicine">Редактировать приём лекарства</string>
    <string name="date_and_time">Дата и время</string>
    <string name="name_of_medicine">Название препарата</string>
    <string name="note">Заметка</string>
    <string name="select_symptom">Выберите симптом</string>
    <string name="add_new_symptom">Добавить новый симптом</string>
    <string name="title">Название</string>
    <string name="further">Далее</string>
    <string name="symptom">Симптом:</string>
    <string name="dict_text">Здесь вы можете найти информацию о препарате по его названию или симптому</string>
    <string name="search_hint">Введите название или симптом</string>
    <string name="not_found">Ничего не найдено</string>
    <string name="med_indication">Показания к применению</string>
    <string name="med_contraindication">Противопоказания</string>
    <string name="med_side_effects">Побочные действия</string>
    <string name="med_dosage">Способы применения</string>
    <string name="type">Тип записи</string>
    <string name="address">Адрес</string>
    <string name="update_appointment">Редактировать запись</string>
    <string name="delete">Удалить</string>
    <string name="symptom_cough">Симптом: кашель</string>
    <string name="dry">Сухой</string>
    <string name="wet">Влажный</string>
    <string name="Feb">Февраль 2022</string>
    <string name="Monday">ПН</string>
    <string name="Tuesday">ВТ</string>
    <string name="Wednesday">СР</string>
    <string name="Thursday">ЧТ</string>
    <string name="Friday">ПТ</string>
    <string name="Saturday">СБ</string>
    <string name="Sunday">ВС</string>
    <string name="avatar">Иконка профиля</string>
    <string name="offer_to_change_password">Желаете сменить пароль?</string>
    <string name="change_password">Смена пароля</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="fr_notifications_settings_explanation">Укажите, насколько заранее и как часто вы хотели бы получать уведомления</string>
    <string name="medical_procedures">Записи на медпроцедуры</string>
    <string name="recommendations">Рекомендации</string>
    <string name="in">за</string>
    <string name="apply_all">Применить все</string>
    <string name="add_procedure">Добавить медпроцедуру</string>
    <string name="date_of_reference">Дата отсчёта</string>
    <string name="frequency">Проводится раз в</string>
    <string name="add_notification">Добавить уведомление</string>
    <string name="notification_type">Тип уведомления</string>
    <string name="logout">Выход</string>
    <string name="logout_text">Вы действительно хотите выйти из аккаунта?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="symptoms_name">Название симптома</string>
    <string name="severity">Степень тяжести</string>
    <string name="gen">Пол:</string>
    <string name="age">Возраст: %d лет</string>
    <string name="no_appointment">На сегодня записей нет =)</string>
    <string name="update_symptom">Редактировать симптом</string>

    <string-array name="gender">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string-array name="appointmentTypes">
        <item>Консультация</item>
        <item>Обследование</item>
        <item>Прививка</item>
    </string-array>

    <string-array name="month">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string-array name="dayOfWeek">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <string-array name="reminders">
        <item>Больше двигайтесь!</item>
        <item>Старайтесь соблюдать режим сна</item>
        <item>Медитация и йога — лучшие способы расслабиться</item>
        <item>Придерживайтесь сбалансированного питания</item>
        <item>Выпрямите спину!</item>
        <item>При сидячей работе делайте перерывы на разминку</item>
        <item>Не забывайте мыть руки!</item>
        <item>Регулярно проветривайте помещение</item>
        <item>Не игнорируйте свой дискомфорт</item>
        <item>Соблюдайте социальную дистанцию!</item>
        <item>Не забывайте о правилах ношения масок</item>
        <item>Выполняйте предписания врача!</item>
        <item>Не подавляйте свои эмоции</item>
        <item>Пейте больше воды</item>
    </string-array>

</resources>