<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="33dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_in"
            android:textColor="@color/birch"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/dark_birch"
            android:textSize="28dp"
            android:textStyle="bold" />
    </LinearLayout>



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_marginTop="195dp"
        android:background="@drawable/selector_bg_registration"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">



        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/registrationName"
                style="@style/EdittextStyle"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registrationEmail"
                style="@style/EdittextStyle"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registrationPassword"
                style="@style/EdittextStyle"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registrationGender"
                style="@style/EdittextStyle"
                android:hint="@string/gender" />

            <EditText
                android:id="@+id/registrationDateOfBirth"
                style="@style/EdittextStyle"
                android:hint="@string/dateOfBirth"
                android:inputType="date" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegistration"
                style="@style/AuthorizationButtonStyle"
                android:layout_marginTop="40dp"
                android:text="@string/registration"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="293dp"
                android:layout_height="38dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="34dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/have_account"
                    android:textColor="@color/birch"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/offer_to_enter"
                    android:textColor="@color/db_text"
                    android:textSize="18dp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:srcCompat="@drawable/ic_jessica_in_mask" />
</FrameLayout>
