<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_gray_20"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dark_pink_top_20"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logoutTv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:text="@string/logout_text"
        android:textColor="@color/dark_birch"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNo"
        style="@style/CancelButtonStyle"
        android:text="@string/no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutTv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnYes"
        style="@style/SaveButtonStyle"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutTv" />
</androidx.constraintlayout.widget.ConstraintLayout>