<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_gray_20"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@color/dark_pink"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/recommended_settings"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameDoctors"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <ImageView
            android:id="@+id/imageDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ic_doctors_description"
            app:srcCompat="@drawable/ic_doctor" />

        <TextView
            android:id="@+id/textDoctors"
            style="@style/textCalendarSettingsStyle"
            android:text="@string/doctors" />

        <ImageView
            android:id="@+id/doctorsArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/ic_arrow_description"
            app:srcCompat="@drawable/ic_arrow" />
    </FrameLayout>

    <View
        android:id="@+id/firstLine"
        android:layout_width="300dp"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameDoctors" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameDoctors" />

    <FrameLayout
        android:id="@+id/frameSurvey"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLine">

        <ImageView
            android:id="@+id/imageSurvey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ic_survey_description"
            app:srcCompat="@drawable/ic_survey" />

        <TextView
            android:id="@+id/textSurvey"
            style="@style/textCalendarSettingsStyle"
            android:text="@string/surveys" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/ic_arrow_description"
            app:srcCompat="@drawable/ic_arrow" />
    </FrameLayout>

    <View
        android:id="@+id/secondLine"
        android:layout_width="300dp"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameSurvey" />

    <FrameLayout
        android:id="@+id/frameVaccination"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondLine">

        <ImageView
            android:id="@+id/imageVaccination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ic_vaccination_description"
            app:srcCompat="@drawable/ic_vaccination" />

        <TextView
            android:id="@+id/textVaccination"
            style="@style/textCalendarSettingsStyle"
            android:text="@string/vaccination" />

        <ImageView
            android:id="@+id/vaccinationArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/ic_arrow_description"
            app:srcCompat="@drawable/ic_arrow" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@style/CancelButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameVaccination" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/SaveButtonStyle"
        android:text="@string/apply_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameVaccination" />

</androidx.constraintlayout.widget.ConstraintLayout>