<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_gray_20"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/titleUpdateApp"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@color/dark_pink"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/update_appointment"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/DropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/dark_birch"
        app:endIconDrawable="@drawable/selector_arrow"
        app:endIconTint="@color/dark_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleUpdateApp">

        <AutoCompleteTextView
            android:id="@+id/update_appointmentType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/type"
            android:inputType="none"
            android:textColor="@color/dark_birch"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/update_appointmentName"
        style="@style/EdittextStyle"
        android:hint="@string/title"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:importantForAutofill="no" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateTimeLayout"
        style="@style/DropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_white_10"
        android:textColorHint="@color/dark_birch"
        app:endIconDrawable="@drawable/selector_arrow"
        app:endIconTint="@color/dark_pink"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_appointmentName">

        <AutoCompleteTextView
            android:id="@+id/appointmentDateTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date_and_time"
            android:inputType="none"
            android:textColor="@color/dark_birch"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/update_appointmentAddress"
        style="@style/EdittextStyle"
        android:hint="@string/address"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeLayout"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/update_appointmentComment"
        style="@style/EdittextStyle"
        android:hint="@string/note"
        android:inputType="textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_appointmentAddress"
        android:importantForAutofill="no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@style/CancelButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_appointmentComment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/SaveButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_appointmentComment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDelete"
        style="@style/CancelButtonStyle"
        android:text="@string/delete"
        android:layout_marginStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>