<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_gray_20"
    android:paddingBottom="20dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dark_pink_top_20"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/currentPassword"
        style="@style/EdittextStyle"
        android:hint="@string/current_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/newPassword"
        style="@style/EdittextStyle"
        android:hint="@string/new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPassword" />

    <EditText
        android:id="@+id/repeatNewPassword"
        style="@style/EdittextStyle"
        android:hint="@string/repeat_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="@style/CancelButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatNewPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/SaveButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatNewPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>