<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_cat_jessica_in_circle" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <EditText
                    android:id="@+id/loginEmail"
                    style="@style/EdittextStyle"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/loginPassword"
                    style="@style/EdittextStyle"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    style="@style/AuthorizationButtonStyle"
                    android:layout_marginTop="40dp"
                    android:text="@string/authorization"
                    android:textAllCaps="false" />

                <LinearLayout
                    android:layout_width="293dp"
                    android:layout_height="38dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="@string/about_account_question"
                        android:textColor="@color/birch"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/offer_to_register"
                        android:textColor="@color/db_text"
                        android:textSize="18dp" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


</FrameLayout>